# qmc-bmgs-reasoning-search

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/: README.md
artifacts/role_lock/d3/20260717_lm_budget_baseline/: manifest.json  records.jsonl  report.md  summary.json
artifacts/role_lock/d4/20260717_channel_ablation_fresh_n256/: manifest.json  report.md  summary.json
artifacts/role_lock/d4/20260717_noise_sweep_n64/: manifest.json  report.md  summary.json
artifacts/role_lock/d4/20260717_primary_precision_n256/: manifest.json  records.jsonl  report.md  summary.json
artifacts/role_lock/d4/20260718_fixed_verifier_n128/: manifest.json  records.jsonl  report.md  summary.json
artifacts/role_lock/d4/20260718_two_phase_n64/: manifest.json  report.md  summary.json
artifacts/role_lock/d4/20260718_two_phase_validation_n128/: manifest.json  report.md  summary.json
artifacts/role_lock/d4/20260719_credit_assignment_n128/: manifest.json  report.md  summary.json
docs/: algorithm.md  countdown_anthropic_dev_contract.md  countdown_benchmark_contract.md  countdown_openai_dev_contract.md  countdown_thompson_source_ablation_contract.md  credit_assignment_contract.md  engineering_north_star.md
docs/observations/: countdown_provider_dev_20260724.md  countdown_thompson_source_n128_20260724.md
docs/results/: channel_ablation_fresh_n256.md  credit_assignment_n128.md  d4_result.md  fixed_verifier_n128.md  two_phase_n64.md  two_phase_validation_n128.md
examples/: single_file_proto.py
scripts/: compare_countdown_provider_snapshots.py  validate.py  verify_artifacts.py
src/qmc_bmgs/: __init__.py  anthropic_countdown.py  countdown_scoring.py  openai_countdown.py  policy.py  records.py
src/qmc_bmgs/benchmarks/: __init__.py  countdown.py  role_lock.py
src/qmc_bmgs/experiments/: __init__.py  channel_ablation.py  countdown_anthropic_dev.py  countdown_openai_dev.py  countdown_thompson_source_ablation.py  credit_assignment.py  d4_noise_sweep.py  fixed_verifier_budget.py  two_phase_sampler.py  two_phase_validation.py
tests/: test_selftests.py
