[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qmc-bmgs-reasoning-search"
version = "0.1.0"
description = "Engineering-oriented QMC/Bayesian token search experiments for LLM reasoning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9"]
anthropic = ["anthropic==0.116.0"]
openai = ["openai==2.45.0"]

[project.scripts]
qmc-bmgs-proto = "qmc_bmgs.policy:main"
qmc-bmgs-benchmark = "qmc_bmgs.benchmarks.role_lock:main"
qmc-bmgs-countdown = "qmc_bmgs.benchmarks.countdown:main"
qmc-bmgs-countdown-anthropic-dev = "qmc_bmgs.experiments.countdown_anthropic_dev:main"
qmc-bmgs-countdown-openai-dev = "qmc_bmgs.experiments.countdown_openai_dev:main"
qmc-bmgs-d4-sweep = "qmc_bmgs.experiments.d4_noise_sweep:main"
qmc-bmgs-channel-ablation = "qmc_bmgs.experiments.channel_ablation:main"
qmc-bmgs-fixed-verifier = "qmc_bmgs.experiments.fixed_verifier_budget:main"
qmc-bmgs-two-phase = "qmc_bmgs.experiments.two_phase_sampler:main"
qmc-bmgs-two-phase-validation = "qmc_bmgs.experiments.two_phase_validation:main"
qmc-bmgs-credit-assignment = "qmc_bmgs.experiments.credit_assignment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
